02-internal-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: internal-service
spec:
  selector:
    matchLabels:
      app: internal-service
  replicas: 2
  template:
    metadata:
      labels:
        app: internal-service
    spec:
      containers:
        - name: internal-service
          image: poc-internal-service:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: internal-service
spec:
  selector:
    app: internal-service
  ports:
    - port: 8080
      targetPort: 8080
  clusterIP: None
