03-external-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-service
spec:
  selector:
    matchLabels:
      app: external-service
  replicas: 1
  template:
    metadata:
      labels:
        app: external-service
    spec:
      containers:
        - name: external-service
          image: external-service:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: external-service
spec:
  selector:
    app: external-service
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
